# omniGlass

./: CMakeLists.txt  TODO.md  arquitecture outline.md  buildsample.sh  doxcfg.txt  readme.md  utils.sh
docs/: annotated.html  config_8h_source.html  constants_8h.html  constants_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_eval.html  globals_func.html  index.html  menudata.js  omniglass_8h.html  omniglass_8h_source.html  platform_8h.html  platform_8h_source.html  platform__linux_8c.html  structextended__touch__parameter-members.html  structextended__touch__parameter.html  structmultitouch__report.html  structomniglass-members.html  structomniglass.html  structplatform-members.html  structtouch__point-members.html  structtouch__point.html  structtouchpad__params.html
docs/html/: annotated.html  classes.html  config_8h_source.html  constants_8h.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js  omniglass_8h.html  omniglass_8h_source.html  platform_8h.html  platform_8h_source.html  platform__linux_8c.html  structextended__touch__parameter-members.html  structextended__touch__parameter.html  structmultitouch__report-members.html  structomniglass-members.html  structomniglass.html  structplatform.html  structtouch__point.html  structtouchpad__params-members.html  structtouchpad__params.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
docs/latex/: annotated.tex  config_8h_source.tex  constants_8h.tex  constants_8h_source.tex  files.tex  omniglass_8h.tex  omniglass_8h_source.tex  platform_8h.tex  platform_8h_source.tex  platform__linux_8c.tex  refman.tex  structextended__touch__parameter.tex  structmultitouch__report.tex  structomniglass.tex  structplatform.tex  structtouch__point.tex  structtouchpad__params.tex
docs/search/: all_3.js  all_4.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  enums_0.js  enumvalues_1.js  files_2.js  functions_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js
scripts/: launcher.sh
src/: compile_flags.txt  config.h  constants.h  linux_nonblocking_test.c  main_page.dox  omniglass.c  omniglass.h  omniglass_core.lua  omniglass_linux.lua  platform.h  platform_linux.c
src/tests/: edge_swipe.c  edge_swipe_multi.c  init.c  swipetap.c  touching.c
templates/: config.lua
